# practicasAlgoritmosDyV

./: .gitignore  CMakeLists.txt  README.md  analisis.py  main.c
algorithms/: ejercicio4.c  ejercicio4.h  ejercicio5.c  ejercicio5.h  ejercicio6.c  ejercicio6.h  ejercicio7.c  ejercicio7.h  mergesort.c  mergesort.h  merguesort.c  merguesort.h  moreset.c  moreset.h  ternaria.c  ternaria.h
disjoint/: disjoint.c  disjoint.h  prdisjoint.c
fvector/: fvector.c  fvector.h
heap_aristas/: depuracion.c  depuracion.h
vdin/: vdin.h
